# aeroops-ai

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  LIVE_RUNTIME_FIX.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  live-e2e.yml
.streamlit/: config.toml  secrets.toml.example
data/: README.md  aeroops.db
docs/: architecture.md  data_dictionary.md  evaluation.md  github-deployment.md  github-readiness.md  live-runtime-diagnostics.md  mcp-antigravity-config.example.json  mcp.md  security.md  streamlit-deployment.md  threat_model.md  ui.md  walkthrough-live-report-normalization.md  walkthrough-live-synthesis-fix.md  walkthrough-live-tool-argument-fix.md
docs/images/: aeroops_demo_walkthrough.webm
scripts/: diagnose_live_path.py  secret_scanner.py  smoke_test.py  smoke_test_mcp.py  streamlit_process_smoke_test.py  validate_public_docs.py  validate_workflows.py  verify_db_artifact.py
src/aeroops/: __init__.py  activity_collector.py  agent.py  app.py  config.py  health.py  mcp_client.py  mcp_server.py  models.py  offline_fixtures.py  report_validator.py  scope_validator.py  security.py  security_plugin.py  services.py  (+9 more)
tests/: __init__.py  conftest.py  test_agent.py  test_db.py  test_db_bootstrap.py  test_e2e_deterministic.py  test_evaluation_cases.py  test_health.py  test_live_runtime.py  test_mcp_contract.py  test_mcp_server.py  test_models.py  test_security.py  test_security_runner.py  test_settings.py  test_specialist_normalization.py  test_ui.py  test_ui_architecture.py  test_ui_integration.py  test_validation.py
(+6 files in other folders)
