[project]
name = "aeroops-agent"
version = "0.1.0"
description = "Aircraft-program operations decision-support agent powered by Google ADK."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "google-adk>=2.0,<3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "streamlit>=1.30",
    "mcp>=1.0",
    "graphviz>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/gbkeku/aeroops-ai"
Repository = "https://github.com/gbkeku/aeroops-ai"
Issues = "https://github.com/gbkeku/aeroops-ai/issues"
Documentation = "https://github.com/gbkeku/aeroops-ai/tree/main/docs"

[project.scripts]
aeroops-data-mcp = "aeroops.mcp_server:main"
aeroops-init-db = "aeroops.db.init_db:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeroops"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google.adk.*",
    "ignore::DeprecationWarning:opentelemetry.*",
    "ignore::UserWarning:google.adk.*",
]
